--- a/index_guanabara.html
+++ b/index_guanabara.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minima ab tempora, dolorem nemo veniam error iusto beatae suscipit totam numquam molestiae exercitationem inventore, quam sequi eveniet praesentium sint perferendis!</p>
-    
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis quis blanditiis voluptate! Eius odio nisi ab, quisquam, maxime quos ipsa quibusdam quia ut consequuntur non beatae autem debitis repellendus!</p>
 </body>
 </html>
